# OWUI-Codebox-MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  sandbox.python.Dockerfile
models/: owui.py  sandbox.py
scripts/: dev_token.py
services/: owui.py
subservers/: _store.py
subservers/codebox/: _helpers.py  _sandbox.py  _utils.py  server.py
tools/: __init__.py  _sandbox.py  python.py  run.py
