[project]
name = "owui-codebox-mcp"
version = "0.2.0"
description = "Per-session Python sandbox MCP server for OpenWebUI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "llm-sandbox[docker]>=0.3.39",
    "pydantic-settings>=2.14.1",
]
